--- a/css/style.css
+++ b/css/style.css
@@ -79,7 +79,7 @@ body {
 }
 .root {
   width: 320px;
-  height: 450px;
+  height: 400px;
   margin: 5px auto;
   background-color: rgba(238, 238, 238, 0.493);
   border-radius: 5px;
@@ -164,7 +164,7 @@ body {
 }
 .quest {
   width: 320px;
-  height: 450px;
+  height: 400px;
   overflow: hidden;
 }
 .quest__start-title {
@@ -175,7 +175,7 @@ body {
   font-size: 12px;
 }
 .quest__list {
-  height: 100%;
+  height: 385px;
   list-style: none;
   margin: 0;
   padding: 0;
@@ -252,7 +252,7 @@ body {
 }
 .hangar {
   width: 320px;
-  height: 450px;
+  height: 400px;
   overflow: hidden;
 }
 .hangar__start-title {
@@ -320,4 +320,11 @@ body {
 .plane__menu {
   margin-top: 10px;
   margin-bottom: 30px;
+}
+.news__list {
+  height: 385px;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  overflow-y: scroll;
 }
